--- a/src/components/Layout/JumbotronComponent.module.css
+++ b/src/components/Layout/JumbotronComponent.module.css
@@ -18,7 +18,7 @@
     color: rgb(3, 60, 65);
 }
 
-#minimize {
+#dismiss {
     border: 2px solid rgb(14, 14, 14);
     background-color: rgb(234, 234, 139);
     color: rgb(72, 72, 0);
