--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 2px solid #78e275;
+  border-bottom: 2px solid #287583;
   padding: 1rem 0;
   margin: 1rem 0;
 }
@@ -21,7 +21,7 @@
 
 .price {
   font-weight: bold;
-  color: #7ae077;
+  color: #287583;
 }
 
 .amount {
@@ -47,8 +47,8 @@
   font: inherit;
   font-weight: bold;
   font-size: 1.25rem;
-  color: #84ee80;
-  border: 1px solid #82e587;
+  color: #287583;
+  border: 1px solid #287583;
   width: 3rem;
   text-align: center;
   border-radius: 6px;
@@ -60,6 +60,6 @@
 
 .cart-item button:hover,
 .cart-item button:active {
-  background-color: #74eb7e;
+  background-color: #287583;
   color: white;
 }
